@@ -40,7 +40,7 @@ data:extend(
         module_slots = 2
       },
       allowed_effects = {"consumption", "speed", "productivity", "pollution"},
-      crafting_categories = {"chemistry", "advanced-chemistry"},
+      crafting_categories = {"advanced-chemistry"},
       crafting_speed = 1.5,
       energy_source = {
         type = "electric",
@@ -166,7 +166,7 @@ data:extend(
         module_slots = 2
       },
       allowed_effects = {"consumption", "speed", "productivity", "pollution"},
-      crafting_categories = {"chemistry", "advanced-chemistry"},
+      crafting_categories = {"advanced-chemistry"},
       crafting_speed = 2.5,
       energy_source = {
         type = "electric",
