@@ -44,7 +44,7 @@ data:extend(
       },
       energy_usage = "250kW",
       ingredient_count = 4,
-      crafting_categories = {"chemistry", "liquifying"},
+      crafting_categories = {"chemistry"},
       module_specification = {
         module_slots = 1
       },
@@ -189,7 +189,7 @@ data:extend(
       },
       energy_usage = "300kW",
       ingredient_count = 4,
-      crafting_categories = {"chemistry", "liquifying"},
+      crafting_categories = {"chemistry"},
       module_specification = {
         module_slots = 2
       },
@@ -334,7 +334,7 @@ data:extend(
       },
       energy_usage = "350kW",
       ingredient_count = 4,
-      crafting_categories = {"chemistry", "liquifying"},
+      crafting_categories = {"chemistry"},
       module_specification = {
         module_slots = 3
       },
@@ -478,7 +478,7 @@ data:extend(
       },
       energy_usage = "400kW",
       ingredient_count = 4,
-      crafting_categories = {"chemistry", "liquifying"},
+      crafting_categories = {"chemistry"},
       module_specification = {
         module_slots = 4
       },
