@@ -19,6 +19,8 @@ Date: ???
       - Flare stack tech
       - Rubber
     - Split tech Advanced chemistry 3 (805)
+    - Removed liquification category from chemplants & adv. chemplants
+    - Removed chemistry cagegory from adv. chemplants
 ---------------------------------------------------------------------------------------------------
 Version: 0.9.22
 Date: 06.06.2022
